# tomographic-map-matching

./: .gitignore  .gitmodules  Dockerfile  LICENSE  Makefile  README.org  debug_image.sh  docker-compose.yaml  launch_image.sh
BUFFER/: BUFFER.def
BUFFER/workspace/: map_matcher.py  map_matching_indoors.py
Consensus/: Consensus.def  estimateRigid2D.patch
Consensus/workspace/: CMakeLists.txt
Consensus/workspace/config/: consensus-interiornet.json  consensus-kitti.json  consensus.json  fpfh-ransac-interiornet.json  fpfh-ransac-kitti.json  fpfh-ransac.json  fpfh-teaser-interiornet.json  fpfh-teaser-kitti.json  fpfh-teaser.json  orb-teaser-2d-interiornet.json  orb-teaser-2d-kitti.json  orb-teaser-2d.json  orb-teaser-3d-interiornet.json  orb-teaser-3d-kitti.json  orb-teaser-3d.json
Consensus/workspace/include/tomographic_map_matching/: consensus.hpp  fpfh_ransac.hpp  fpfh_teaser.hpp  map_matcher_base.hpp  orb_teaser.hpp
Consensus/workspace/src/: batch_processing.cpp  consensus.cpp  fpfh_ransac.cpp  fpfh_teaser.cpp  orb_teaser.cpp
DeepGlobalRegistration/: DeepGlobalRegistration.def
DeepGlobalRegistration/workspace/: config_indoors.json  config_outdoors.json  map_matcher.py
GeoTransformer/: GeoTransformer.def
GeoTransformer/workspace/: config_indoors.json  config_outdoors.json  map_matcher.py
RoITr/: RoITr.def
RoITr/workspace/: map_matching_indoors.py
data/: .gitignore  README.org  download_data.sh
data-config/: README.org
data/config/demo/: demo.json
data/demo/: demo-room-1-gtpose.txt  demo-room-1.pcd  demo-room-2-gtpose.txt  demo-room-2.pcd
learning-based/: Makefile  README.org  launch_image.sh
learning-based/BUFFER/workspace/: map_matching_indoors.py
learning-based/DeepGlobalRegistration/: DeepGlobalRegistration.def
learning-based/DeepGlobalRegistration/workspace/: local_config.py  map_matching_indoors.py
learning-based/GeoTransformer/: GeoTransformer.def
learning-based/GeoTransformer/workspace/: map_matcher_indoors.py  map_matching_indoors.py
learning-based/RoITr/: RoITr.def
learning-based/RoITr/workspace/: indoor_config.yaml  map_matching_indoors.py
learning-based/singularity/: Makefile  launch_image.sh
learning-based/singularity/GeoTransformer/scripts/: config.py  map_matcher_indoors.py
learning-based/weights/: download_weights.sh
tomographic-map-matching/: CMakeLists.txt
tomographic-map-matching/include/tomographic_map_matching/: consensus.hpp  fpfh_ransac.hpp  harris3d_fpfh_ransac.hpp  map_matcher_base.hpp  orb_teaser.hpp  teaser_orb.hpp
tomographic-map-matching/src/: batch_processing.cpp  consensus.cpp  demo.cpp  demo_config.json  demo_data.json  fpfh_ransac.cpp  harris3d_fpfh_ransac.cpp  map_matcher_base.cpp  map_matching.cpp  teaser_orb.cpp
utils/: extract_slices.py  generate_a1_data_configuration.py  generate_interiornet_data_configuration.py  generate_kitti_data_configuration.py  generate_plots.py  run_consensus.py  run_consensus.sh  visualize_pair.py  visualize_pcd.py
weights/: README.org  download_weights.sh
